# libxev-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  publish.yml
crates/libxev/: Cargo.toml  README.md
crates/libxev-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/libxev-sys/src/: lib.rs
crates/libxev/src/: lib.rs  main.rs  threadpool.rs  watcher.rs
crates/libxev/src/extensions/: completion.rs  file.rs  mod.rs
crates/libxev/tests/: file.rs  watcher.rs
scripts/: ci-check  cut-rc
