[package]
name = "libxev-sys"
version = "0.1.0"
edition = "2021"
description = "Low-level FFI bindings to libxev (built from vendored sources via Zig)."
license = "MIT"
links = "xev"
build = "build.rs"
keywords = ["libxev", "bindings", "uring"]

[build-dependencies]
bindgen = "0.70"

[dependencies]

[features]
default = []
# Build libxev with Zig's Debug mode instead of ReleaseFast.
debug = []
# Build from `vendor/libxev-fork` (a vendored fork that exposes additional
# C-API surface) instead of the upstream `vendor/libxev` tree.
extended-api = []
# Developer-only: before building, copy the source tree at `$LIBXEV_SOURCE`
# into `vendor/libxev-fork`, then build from it. Implies `extended-api`.
local-fork = ["extended-api"]
